--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>OnTrack</title>
   </head>
   <body>
-    <div id="onTrack"></div>
+    <div id="onTrack" class="flex min-h-screen flex-col"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
